# jcodemunch-mcp

./: .gitignore  AGENT_HOOKS.md  ARCHITECTURE.md  BUILD_ORDER.md  CACHE_SPEC.md  CHANGELOG.md  CLAUDE.md  HEADLESS.md  INSTALL_FROM_SOURCE.md  LANGUAGE_SUPPORT.md  LOCAL_FOLDER_TODO.md  PROMPT.md  QUICKSTART.md  README.md  SPEC.md  TOKEN_SAVINGS.md  TROUBLESHOOTING.md  USER_GUIDE.md  WHY_CODEMUNCH.md  pyproject.toml  server.json
.github/workflows/: test.yml
benchmarks/: ab-test-dead-code-2026-03-18.md  results.md
cli/: README.md
dotnet/: .gitignore  JCodeMunch.Mcp.sln
dotnet/src/JCodeMunch.Mcp/: JCodeMunch.Mcp.csproj  Program.cs
src/jcodemunch_mcp/: config.py  hook_event.py  security.py  server.py  watcher.py
tests/: __init__.py  search_snapshot_before.txt  test_backpressure_regression.py  test_call_hierarchy.py  test_cleanup.py  test_config.py  test_find_importers.py  test_freshness.py  test_get_context_bundle.py  test_hardening.py  test_hermes.py  test_hooks.py  test_incremental.py  test_kotlin.py  test_languages.py  test_laravel_provider.py  test_local_integration.py  test_markdown_language.py  test_parser.py  test_perf_telemetry.py  test_plan_refactoring.py  test_render_diagram_viewer.py  test_retrieval_tools.py  test_scala_parser.py  test_search_columns.py  test_search_perf.py  test_security.py  test_server.py  test_session_journal.py  test_session_snapshot.py  test_storage.py  test_summarizer.py  test_swift_parser.py  test_token_tracker.py  test_tools.py  test_watch_claude.py  test_watcher_serve.py
tests/encoding/: test_tier1_roundtrip.py
(+72 files in other folders)
