[project]
name = "jcodemunch-mcp"
version = "0.1.0"
description = "Token-efficient MCP server for GitHub source code exploration via tree-sitter AST parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "tree-sitter-language-pack>=0.7.0",
    "pathspec>=0.12.0",
]

[project.scripts]
jcodemunch-mcp = "jcodemunch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcodemunch_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
